--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl:
 url: https://leejane.org
 date_format: "ordinal"
-title: 非典型性测试者
+title: 小李的测试blog
 subtitle: "测试技巧汇总"
 description: "Jane的个人博客"
 keywords: Lee jane, jane, 测试
