--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ disqus:
     username: 
 # https://imsun.net/posts/gitment-introduction/
 gitment:
-    owner: mzlogin
+    owner: leejane
     repo: blog-comments
     oauth:
         client_id: d2e1cbbd298958076462
