--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl:
 url: https://leejane.org
 date_format: "ordinal"
-title: 既然不能安稳现世，那就拼命折腾吧！
+title: "既然不能安稳现世，那就拼命折腾吧！"
 subtitle: "测试技巧汇总"
 description: "Jane的个人博客"
 keywords: Lee jane, jane, 测试
